--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "joi": "^13.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
